Placeholder text updates + swapped clock font for a monospace one to prevent the element jumping

--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,7 @@ a:hover {
 }
 
 .time {
-  font-size: 48px;
-  font-weight: bold;
+  font-size: 40px;
+
+  font-family: "Courier New", monospace;
 }
